<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D19D6F"
    tools:context=".Activities.PageAcceuil">

    <ImageView
        android:id="@+id/femme"
        android:layout_width="203dp"
        android:layout_height="344dp"
        android:contentDescription="@string/descpageacceuil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37"
        app:srcCompat="@drawable/shapeleft" />

    <ImageView
        android:id="@+id/client"
        android:layout_width="208dp"
        android:layout_height="472dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/imagechoix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/femme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826"
        app:srcCompat="@drawable/shaperight" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="154dp"
        android:layout_height="54dp"
        android:layout_marginTop="116dp"
        android:layout_marginRight="20dp"
        android:text="@string/femme"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/femme"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/femme" />

    <TextView
        android:layout_width="128dp"
        android:layout_height="78dp"
        android:text="@string/choixclient"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/client"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/client"
        app:layout_constraintTop_toTopOf="@+id/client"
        app:layout_constraintVertical_bias="0.451" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="345dp"
        android:layout_height="102dp"
        android:text="@string/question"
        android:textColor="#FAFAFA"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/client"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="167dp"
        android:layout_height="46dp"
        android:text="@string/homemadechoix"
        android:textColor="#F6DCBF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/femme"
        app:layout_constraintEnd_toEndOf="@+id/femme"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>