<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.EditProfileActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="121dp"
                android:layout_height="84dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_user" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_profile_picture" />

            <EditText
                android:id="@+id/usernamerow"
                android:layout_width="327dp"
                android:layout_height="56dp"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_edtext"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:editable="false"
                android:elevation="5dp"
                android:hint="@string/nom_complet"
                android:paddingLeft="20dp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="327dp"
                android:layout_height="56dp"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_edtext"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:elevation="5dp"
                android:hint="@string/t_l_phone"
                android:paddingLeft="20dp" />

            <EditText
                android:id="@+id/adress"
                android:layout_width="327dp"
                android:layout_height="56dp"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_edtext"
                android:drawableLeft="@drawable/ic_adress"
                android:drawablePadding="10dp"
                android:elevation="5dp"
                android:hint="@string/adresse"
                android:paddingLeft="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/services"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_edtext"
                android:hint="@string/service"
                app:boxCornerRadiusBottomEnd="40dp"
                app:boxCornerRadiusBottomStart="40dp"
                app:boxCornerRadiusTopEnd="40dp"
                app:boxCornerRadiusTopStart="40dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="dropdown_menu"
                app:startIconDrawable="@drawable/ic_services">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_text"
                    android:layout_width="327dp"
                    android:layout_height="56dp"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <EditText
                android:id="@+id/Description"
                android:layout_width="327dp"
                android:layout_height="56dp"
                android:layout_margin="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_edtext"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                android:ems="10"
                android:hint="@string/decrivez_votre_service"
                android:inputType="textMultiLine"
                android:paddingLeft="20dp" />

            <Button
                android:id="@+id/updatBtn"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_btn"
                android:text="@string/modifier"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="40dp" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_btn"
                android:text="@string/annuler"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="40dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>