<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D19D6F"
    tools:context=".Activities.CategoryActivity">

    <ImageView
        android:id="@+id/pates"
        android:layout_width="338dp"
        android:layout_height="182dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/shapedown" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="218dp"
        android:layout_height="105dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/choisir_une_cat_gorie"
        android:textColor="#F1E6E6"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_tes"
        android:textColor="#E8DEDE"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pates"
        app:layout_constraintEnd_toEndOf="@+id/pates"
        app:layout_constraintStart_toStartOf="@+id/pates"
        app:layout_constraintTop_toTopOf="@+id/pates"
        app:layout_constraintVertical_bias="0.333" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="96dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/pates"
        app:layout_constraintEnd_toEndOf="@+id/pates"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="@+id/pates"
        app:layout_constraintTop_toTopOf="@+id/pates"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bread" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toBottomOf="@+id/pates"
        app:layout_constraintEnd_toEndOf="@+id/pates"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="@+id/pates"
        app:layout_constraintTop_toTopOf="@+id/pates"
        app:layout_constraintVertical_bias="0.958"
        app:srcCompat="@drawable/rollingpin" />

    <ImageView
        android:id="@+id/sucres"
        android:layout_width="182dp"
        android:layout_height="259dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552"
        app:srcCompat="@drawable/shapeleft" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toBottomOf="@+id/sucres"
        app:layout_constraintEnd_toEndOf="@+id/sucres"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sucres"
        app:layout_constraintVertical_bias="0.603"
        app:srcCompat="@drawable/cndycne" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="100dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toBottomOf="@+id/sucres"
        app:layout_constraintEnd_toEndOf="@+id/sucres"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sucres"
        app:layout_constraintTop_toTopOf="@+id/sucres"
        app:layout_constraintVertical_bias="0.607"
        app:srcCompat="@drawable/donut" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/sucr_s"
        android:textColor="#F6EBEB"
        android:textSize="40dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/sucres"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sucres" />

    <ImageView
        android:id="@+id/sales"
        android:layout_width="198dp"
        android:layout_height="333dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/shaperight" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sal_s"
        android:textColor="#F1E8E8"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/sales"
        app:layout_constraintEnd_toEndOf="@+id/sales"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="@+id/sales"
        app:layout_constraintTop_toTopOf="@+id/sales"
        app:layout_constraintVertical_bias="0.224" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/sales"
        app:layout_constraintEnd_toEndOf="@+id/sales"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="@+id/sales"
        app:layout_constraintTop_toTopOf="@+id/sales"
        app:layout_constraintVertical_bias="0.588"
        app:srcCompat="@drawable/seasoning" />
</androidx.constraintlayout.widget.ConstraintLayout>